fixed the overflow, there is a literal HTML function for that

--- a/style.css
+++ b/style.css
@@ -189,6 +189,7 @@ a:visited {
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
   }
 
 @media(prefers-reduced-motion) {
